--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "main": ".eslintrc.js",
   "repository": "https://github.com/LaloHao/eslint",
-  "author": "Eduardo V.",
+  "author": "Eduardo V. <lalohao@gmail.com>",
   "license": "WTFPL",
   "dependencies": {
     "babel-eslint": "^8.2.6",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jest": "^21.18.0",
     "eslint-plugin-jsx-a11y": "^6.1.0",
     "eslint-plugin-react": "^7.10.0"
   }
